--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,7 +1,13 @@
-fastapi==0.103.2
-websockets==11.0.3
-uvicorn==0.23.2
-dataclasses==0.6
-cryptography==41.0.4
-sqlalchemy==2.0.21
-psycopg2==2.9.9
+fastapi~=0.103.2
+websockets~=11.0.3
+uvicorn~=0.23.2
+dataclasses~=0.6
+cryptography~=41.0.4
+sqlalchemy~=2.0.21
+asyncpg~=0.28.0
+pyjwt~=2.8.0
+pydantic~=2.4.2
+pytest~=7.4.2
+freezegun~=1.2.2
+pytest-asyncio~=0.21.1
+pytest-mock~=3.11.1
