--- a/compose.yaml
+++ b/compose.yaml
@@ -1,23 +1,34 @@
 services:
   server:
     build:
-      context: .
+      context: ./server
     ports:
       - 8000:8000
+    expose:
+      - 8000
+    environment:
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_NAME=rps
     depends_on:
       db:
         condition: service_healthy
+  client:
+    build:
+      context: ./client
+    ports:
+      - 8080:80
+    depends_on:
+      - server
   db:
     image: postgres
     restart: always
     user: postgres
-    secrets:
-      - db-password
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=example
-      - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
+      - POSTGRES_DB=rps
+      - POSTGRES_PASSWORD=pwd
     expose:
       - 5432
     healthcheck:
@@ -27,7 +38,4 @@ services:
       retries: 5
 volumes:
   db-data:
-secrets:
-  db-password:
-    file: db/password.txt
-
+  
